--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/fanderzon/human-date-range#readme",
   "devDependencies": {
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "6.18.0",
     "jest": "18.1.0"
   }
 }
