--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "human-date-range",
   "version": "1.0.0",
   "description": "Small module for formatting a human readable date range",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "src/index.js",
   "scripts": {
+    "preinstall": "rollup -c",
     "test": "jest --coverage"
   },
   "repository": {
@@ -19,6 +21,9 @@
   "devDependencies": {
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "6.18.0",
-    "jest": "18.1.0"
+    "buble": "0.15.2",
+    "jest": "18.1.0",
+    "rollup": "0.41.1",
+    "rollup-plugin-buble": "0.15.0"
   }
 }
